--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT =5000
-CONNECTION_STRING ="mongodb+srv://SojibAli:t9HcIEdd014hZWP7@cluster0.hveeviv.mongodb.net/
-ecoshop
-?retryWrites=true&w=majority&appName=Cluster0"
+PORT =7000
+CONNECTION_STRING ="mongodb+srv://sojib122:2mgVTouAIiex66T8@cluster0.hveeviv.mongodb.net/
+ecoshop2?retryWrites=true&w=majority&appName=Cluster0"
+
 
 cloudinary_Config_cloud_name ="dhb7vg3du"
 cloudinary_Config_api_key ="313668868967426"
