--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT =7000
-CONNECTION_STRING ="mongodb+srv://sojib122:2mgVTouAIiex66T8@cluster0.hveeviv.mongodb.net/
-ecoshop2?retryWrites=true&w=majority&appName=Cluster0"
+CONNECTION_STRING ="mongodb+srv://tsiwe76fuyh:EseIQlArxydllpbN@cluster0.uweozcs.mongodb.net/ecoshopone?retryWrites=true&w=majority&appName=Cluster0"
 
 
 cloudinary_Config_cloud_name ="dhb7vg3du"
